@startuml

title __CONFIG's Class Diagram__\n

  package com.engineer.lrogozinski {
    package com.engineer.lrogozinski.config {
      class CORSFilter {
          + doFilter()
          + init()
          + destroy()
      }
    }
  }
  

  package com.engineer.lrogozinski {
    package com.engineer.lrogozinski.config {
      class JwtAuthenticationEntryPoint {
          + commence()
      }
    }
  }
  

  package com.engineer.lrogozinski {
    package com.engineer.lrogozinski.config {
      class JwtAuthenticationFilter {
          - userDetailsService : UserDetailsService
          + JwtAuthenticationFilter()
          # doFilterInternal()
      }
    }
  }
  

  class FilterConfigPropertyValues {
      + FilterConfigPropertyValues()
  }
  

  package com.engineer.lrogozinski {
    package com.engineer.lrogozinski.config {
      class JwtTokenUtil {
          + DeleteUsedToken()
          + getUsernameFromToken()
          + getExpirationDateFromToken()
          + getClaimFromToken()
          - getAllClaimsFromToken()
          - isTokenExpired()
          + validateToken()
          + generateToken()
          ~ getAuthentication()
      }
    }
  }
  

  package com.engineer.lrogozinski {
    package com.engineer.lrogozinski.config {
      class WebSecurityConfig {
          - userDetailsService : UserDetailsService
          + authenticationManagerBean()
          + globalUserDetails()
          + authenticationTokenFilterBean()
          # configure()
          + encoder()
      }
    }
  }
  

  class LazyPasswordEncoder {
      - applicationContext : ApplicationContext
      - passwordEncoder : PasswordEncoder
      ~ LazyPasswordEncoder()
      + encode()
      + matches()
      - getPasswordEncoder()
      - getBeanOrNull()
      + toString()
  }
  

  class DefaultPasswordEncoderAuthenticationManagerBuilder {
      - defaultPasswordEncoder : PasswordEncoder
      ~ DefaultPasswordEncoderAuthenticationManagerBuilder()
      + inMemoryAuthentication()
      + jdbcAuthentication()
      + userDetailsService()
  }
  

  enum BuildState {
    UNBUILT
    INITIALIZING
    CONFIGURING
    BUILDING
    BUILT
    order
  }
  

  class AuthenticationManagerDelegator {
      - delegateBuilder : AuthenticationManagerBuilder
      - delegate : AuthenticationManager
      - delegateMonitor : Object
      - beanNames : Set<String>
      ~ AuthenticationManagerDelegator()
      + authenticate()
      {static} - getAuthenticationManagerBeanNames()
      {static} - validateBeanCycle()
  }
  

  class UserDetailsServiceDelegator {
      - delegateBuilders : List<AuthenticationManagerBuilder>
      - delegate : UserDetailsService
      - delegateMonitor : Object
      ~ UserDetailsServiceDelegator()
      + loadUserByUsername()
  }
  

  package com.engineer.lrogozinski {
    package com.engineer.lrogozinski.config {
      class WebSocketConfig {
          + configureMessageBroker()
          + registerStompEndpoints()
      }
    }
  }
  

  CORSFilter -up-|> Filter
  JwtAuthenticationEntryPoint -up-|> AuthenticationEntryPoint
  JwtAuthenticationEntryPoint -up-|> Serializable
  JwtAuthenticationFilter -up-|> OncePerRequestFilter
  JwtAuthenticationFilter o-- JwtTokenUtil : jwtTokenUtil
  JwtAuthenticationFilter +-down- FilterConfigPropertyValues
  FilterConfigPropertyValues -up-|> MutablePropertyValues
  JwtTokenUtil -up-|> Serializable
  JwtTokenUtil o-- UsedTokenService : usedTokenService
  WebSecurityConfig -up-|> WebSecurityConfigurerAdapter
  WebSecurityConfig o-- JwtAuthenticationEntryPoint : unauthorizedHandler
  WebSecurityConfig +-down- LazyPasswordEncoder
  WebSecurityConfig +-down- DefaultPasswordEncoderAuthenticationManagerBuilder
  WebSecurityConfig +-down- AuthenticationManagerDelegator
  WebSecurityConfig +-down- UserDetailsServiceDelegator
  LazyPasswordEncoder -up-|> PasswordEncoder
  DefaultPasswordEncoderAuthenticationManagerBuilder -up-|> AuthenticationManagerBuilder
  DefaultPasswordEncoderAuthenticationManagerBuilder +-down- BuildState
  AuthenticationManagerDelegator -up-|> AuthenticationManager
  UserDetailsServiceDelegator -up-|> UserDetailsService
  WebSocketConfig -up-|> AbstractWebSocketMessageBrokerConfigurer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
